# zhac-mono-core

./: .gitignore  CMakeLists.txt  NOTICE  README.md  WS_PROTOCOL.md  partitions.csv  sdkconfig.defaults
.github/workflows/: port-drift.yml
components/hap_master/: CMakeLists.txt  hap_master.cpp
components/hap_master/include/: hap_master.h
components/hap_slave/: CMakeLists.txt  hap_slave.cpp
components/hap_slave/include/: hap_slave.h
components/lua_cjson/: CMakeLists.txt
components/lua_engine/: CMakeLists.txt  Kconfig
components/mono_bridge/: CMakeLists.txt  mono_bridge.cpp
components/mono_bridge/include/: mono_bridge.h
main/: CMakeLists.txt  Kconfig.projbuild  api_devices.cpp  api_devices.h  api_groups.cpp  api_groups.h  api_remote.cpp  api_remote.h  api_rules.cpp  api_rules.h  api_scripts.cpp  api_scripts.h  api_status.cpp  api_status.h  api_system.cpp  api_system.h  api_wifi.cpp  api_wifi.h  device_options.cpp  device_options.h  groups_store.cpp  groups_store.h  idf_component.yml  log_ring.cpp  main.cpp  spa_serve.cpp  spa_serve.h  sys_state.cpp  sys_state.h  wifi.cpp  wifi.h  ws_bridge.cpp  ws_bridge.h
tools/: PORTING.md  check-port-drift.sh  port-baseline.sha256  port-files.txt
